labs/q12/quotes-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quotes
    app.kubernetes.io/component: quotes
    app.kubernetes.io/instance: quotes
  name: quotes
  namespace: network-debug
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8000-tcp
    port: 8000
    protocol: TCP
    targetPort: 80
  selector:
    deployment: app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
