labs/q12/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quotes
    app.kubernetes.io/component: quotes
    app.kubernetes.io/instance: quotes
  name: quotes
  namespace: network-debug
spec:
  port:
    targetPort: 8000-tcp
  to:
    kind: Service
    name: quotes
    weight: 100
  wildcardPolicy: None
